testsuite/tests/structs/field_override/test.out
== foo.lkt ==
foo.lkt:19:18: error: only properties can override properties
19 |     @parse_field name: Name
   |                  ^^^^^^^^^^


lkt_compile: Done
